// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`azure-cost-optimization - Trigger Tests Trigger Keywords Snapshot skill description triggers match snapshot 1`] = `
{
  "description": "Identify Azure cost savings from usage and spending data. USE FOR: optimize Azure costs, reduce Azure spending/expenses, analyze Azure costs, find cost savings, generate cost optimization report, find orphaned or unused resources, rightsize VMs, reduce waste, optimize Redis costs, optimize storage costs. DO NOT USE FOR: creating new resources, general diagnostics, or security issues.",
  "extractedKeywords": [
    "analyze",
    "app service",
    "azure",
    "cli",
    "container",
    "cosmos",
    "cost",
    "costs",
    "creating",
    "data",
    "diagnostics",
    "expenses",
    "find",
    "from",
    "function",
    "general",
    "generate",
    "identify",
    "issues",
    "key vault",
    "mcp",
    "monitor",
    "optimization",
    "optimize",
    "orphaned",
    "redis",
    "reduce",
    "report",
    "resources",
    "rightsize",
    "savings",
    "security",
    "spending",
    "sql",
    "storage",
    "unused",
    "usage",
    "validation",
    "waste",
  ],
  "name": "azure-cost-optimization",
}
`;

exports[`azure-cost-optimization - Trigger Tests Trigger Keywords Snapshot skill keywords match snapshot 1`] = `
[
  "analyze",
  "app service",
  "azure",
  "cli",
  "container",
  "cosmos",
  "cost",
  "costs",
  "creating",
  "data",
  "diagnostics",
  "expenses",
  "find",
  "from",
  "function",
  "general",
  "generate",
  "identify",
  "issues",
  "key vault",
  "mcp",
  "monitor",
  "optimization",
  "optimize",
  "orphaned",
  "redis",
  "reduce",
  "report",
  "resources",
  "rightsize",
  "savings",
  "security",
  "spending",
  "sql",
  "storage",
  "unused",
  "usage",
  "validation",
  "waste",
]
`;
